--- a/pagereplacementAlgo/PRA_HOMEPAGE.css
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.css
@@ -232,6 +232,9 @@ border: 4px solid #06b0d7;
 .content > .menu > .menu-item > div > a > .optimal::before {
 border: 4px solid #010b1e;
 }
+.content > .menu > .menu-item > div > a > .comparisom::before {
+border: 4px solid #06b0d7;
+}
 
 
 .content > .menu > .menu-item > div > a > div:hover::before,
@@ -265,5 +268,9 @@ background-color: #06b0d7;
 
 .content > .menu > .menu-item > div > a > .optimal {
 background-color: #010b1e;
+  
+.content > .menu > .menu-item > div > a > .comparisom {
+background-color: #06b0d7;
+}
 color: aliceblue;
 }
