--- a/pagereplacementAlgo/PRA_HOMEPAGE.css
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.css
@@ -232,6 +232,15 @@ border: 4px solid #06b0d7;
 .content > .menu > .menu-item > div > a > .optimal::before {
 border: 4px solid #010b1e;
 }
+.content > .menu > .menu-item > div > a > .mru::before {
+border: 4px solid #ffc000;
+}
+.content > .menu > .menu-item > div > a > .random::before {
+border: 4px solid #06b0d7;
+}
+.content > .menu > .menu-item > div > a > .lifo::before {
+border: 4px solid #010b1e;
+}
 .content > .menu > .menu-item > div > a > .comparisom::before {
 border: 4px solid #06b0d7;
 }
@@ -258,6 +267,17 @@ font-weight: 400;
 text-align: center;
 }
 
+.content > .menu > .menu-item > div > a > .fifo {
+background-color: #ffc000;
+}
+
+.content > .menu > .menu-item > div > a > .lru {
+background-color: #06b0d7;
+}
+
+.content > .menu > .menu-item > div > a > .optimal {
+background-color: #010b1e;
+  
 .content > .menu > .menu-item > div > a > .fifo {
 background-color: #ffc000;
 }
