--- a/pagereplacementAlgo/PRA_HOMEPAGE.css
+++ b/pagereplacementAlgo/PRA_HOMEPAGE.css
@@ -227,7 +227,7 @@ transition: top, bottom, right, left, 300ms ease-in-out;
 border: 4px solid #ffc000;
 }
 .content > .menu > .menu-item > div > a > .lru::before {
-border: 4px solid #06b0d7;
+border: 4px solid #ffc000;
 }
 .content > .menu > .menu-item > div > a > .optimal::before {
 border: 4px solid #010b1e;
